# 3DViewer

./: .gitattributes  README.md
3DViewer_v1.0/: CMakeLists.txt  Makefile  README.md  affine.c  change_to_obj.sh  change_to_txt.sh  main.c  matrix_utils.c  test.txt  tests.c  viewer.c  viewer.h
3DViewer_v1.0/models/: cube.txt  pyramid.txt  pyramid_1_poly.txt
3DViewer_v1.0/modules/: CodeCoverage.cmake
3DViewer_v1.0/qt/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myopenglwidget.cpp  myopenglwidget.h  styles.h
src/: CMakeLists.txt  Makefile  main.cc
src/Controller/: CMakeLists.txt
src/Controller/include/: command.h  strategy.h  viewer_controller.h
src/Controller/source/: command.cc  strategy.cc  viewer_controller.cc
src/Model/: CMakeLists.txt
src/Model/include/: enums.h  settings.h  viewer_model.h
src/Model/source/: settings.cc  viewer_model.cc
src/Model/test/: viewer_test.cc
src/View/: CMakeLists.txt
src/View/form/: mainwindow.ui
src/View/include/: commands.h  mainwindow.h  myopenglwidget.h  strategies.h
src/View/source/: commands.cc  mainwindow.cc  myopenglwidget.cc  strategies.cc
